--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="expires" content="0">
   <title>Ionic App</title>
 
   <base href="/" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
@@ -21,7 +23,11 @@
 </head>
 
 <body>
+  <!--script type="text/javascript">
+    if (window.location.protocol != "https:") {
+      self.location.href = "https://admin.#DOMAIN#";
+    }
+  </script-->
   <app-root></app-root>
 </body>
-
 </html>
