--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="expires" content="0">
-  <title>Ionic App</title>
+  <title>CRANIX</title>
 
   <base href="/" />
 
