--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,14 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <!-- link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" -->
 </head>
 
 <body>
-  <!-- script type="text/javascript">
+  <script type="text/javascript">
     if (window.location.protocol != "https:") {
       self.location.href = "https://admin.#DOMAIN#";
     }
-  </script -->
+  </script>
   <app-root></app-root>
 </body>
 </html>
