Implementing:     Stop running import     Delete import     Download txt password files.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="pragma" content="no-cache">
   <meta http-equiv="expires" content="0">
+
   <title>CRANIX</title>
 
   <base href="/" />
@@ -21,11 +24,11 @@
 </head>
 
 <body>
-  <script type="text/javascript">
+  <!-- script type="text/javascript">
     if (window.location.protocol != "https:") {
       self.location.href = "https://admin.#DOMAIN#";
     }
-  </script>
+  </script -->
   <app-root></app-root>
 </body>
 </html>
