--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
 
   <base href="/" />
 
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
@@ -23,11 +24,11 @@
 </head>
 
 <body>
-  <!-- script type="text/javascript">
+  <script type="text/javascript">
     if (window.location.protocol != "https:") {
       self.location.href = "https://admin.#DOMAIN#";
     }
-  </script -->
+  </script>
   <app-root></app-root>
 </body>
 </html>
