--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="expires" content="0">
 
   <title>CRANIX</title>
-
+  <!-- meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com" -->
   <base href="/" />
 
   <meta name="viewport"
